--- a/index.html
+++ b/index.html
@@ -16,16 +16,25 @@
                 <textarea id="input" rows="4" style="width: 650px;" oninput="updateResult()"></textarea>
             </label>
         </p>
-        <p>
-            <label for="output">Output:</label>
-            <input type="button" id="selectDirectory" value="Select Directory" onclick="fileselect()">&emsp;
-            <label for="zfill">0埋桁:</label>
-            <input type="number" id="zfill" value="4" min="1" max="8" onchange="updateInOut()">&emsp;
-            <label for="extension">拡張子:</label>
-            <textarea id="extension" rows="1" style="width: 60px;" onchange="updateInOut()">txt</textarea>&emsp;
-            <label for="manual"><input type="checkbox" id="manual">manual mode (←↑→ ⌫ keys)</label><br>
-            <textarea id="output" rows="4" style="width: 650px;" oninput="updateResult()"></textarea>
-        </p>
+        <div style="display: flex;">
+            <div style="margin-right: 10px;">
+                <label for="output">Output:</label>
+                <input type="button" id="selectDirectory" value="Select Directory" onclick="fileselect()">&emsp;
+                <label for="zfill">0埋桁:</label>
+                <input type="number" id="zfill" value="4" min="1" max="8" onchange="updateInOut()">&emsp;
+                <label for="extension_out">拡張子:</label>
+                <textarea id="extension_out" rows="1" style="width: 60px;" onchange="updateInOut()">txt</textarea>&emsp;
+                <label for="manual"><input type="checkbox" id="manual">manual mode (←↑→ ⌫ keys)</label><br>
+                <textarea id="output" rows="4" style="width: 650px;" oninput="updateResult()"></textarea>
+            </div>
+        
+            <div style="margin-left: 10px;">
+                <label for="errorbox">Errorbox:</label>
+                <label for="extension_error">拡張子:</label>
+                <textarea id="extension_error" rows="1" style="width: 60px;" onchange="updateInOut()">err</textarea>&emsp;<br>
+                <textarea id="errorbox" rows="4" style="width: 650px;"></textarea>
+            </div>
+        </div>
         <p style="display:flex;">
             <input type="button" id="play" value="▶" style="width:32px;height:32px;bottom:5px;position:relative;">&ensp;
             <label>
